<?xml version="1.0" encoding="utf-8"?>
<!--
  Capstone Project: Jornee 
  FileName: strings.xml
  Copyright © 2014 4T1C - aka Group 3 - FPT University Da Nang. 
  All rights reserved. 
  No part of this application source code or any of its contents may be reproduced, 
  copied, modified or adapted, without the prior written consent of the author, 
  unless otherwise indicated for stand-alone materials.
-->
<resources>

    <string name="app_name">Jornee</string>

    <string-array name="menuItems">
        <item></item>
        <item>Home</item>
        <item>Outside</item>
        <item>Message</item>
        <item>Host</item>
        <item>Location</item>
        <item>Setting</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string-array name="vehicleList">
        <item>Foot</item>
        <item>Bike</item>
        <item>Motobike</item>
        <item>Car</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Ship</item>
        <item>Plane</item>
    </string-array>
    <string-array name="iplace_categories">
        <item>Eating</item>
        <item>Drinking</item>
        <item>Staying</item>
        <item>Emergency</item>
        <item>Entertainment</item>
    </string-array>
    <!-- label,title -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_host_view_introduce">HostViewIntroduce</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_host_view_tips">HostViewTips</string>
    <string name="hintlocation"><small><i>where do you want to share</i></small></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_old_password">Old-Password</string>
    <string name="hint_confirm">Confirm</string>
    <string name="title_change_password">Change Password</string>
    <string name="register_username_textview">Username</string>
    <string name="register_email_textView">Email</string>
    <string name="register_password_textview">Password</string>
    <string name="register_new_account_btn">Register New Account</string>
    <string name="login_link_text">Already has account! Login here</string>
    <string name="register_confirm_textView">Confirm</string>
    <string name="register_username_textView">Username</string>
    <string name="register_email_textview">Email</string>
    <string name="register_confirm_password_textview">Confirm Password</string>
    <string name="register_register_btn">Register New Account</string>
    <string name="register_login_link">Already has account! Login here</string>
    <string name="host_status_activate">Activated</string>
    <string name="host_status_deactivate">Deactivated</string>
    <string name="share_interesting_place_category_prompt">Category</string>

    <!-- message -->
    <string name="error_password_confirmination_not_match">Your password and confirmation do not match!</string>
    <string name="message_input_new_password">Please Input your new password and confirmation.</string>
    <string name="message_reset_passwors_success">Reset Password success. Please check your email!</string>
    <string name="message_change_password_success">Change password success!</string>
    <string name="message_register_success">Register success!</string>
    <string name="message_empty_following_list">This user is not following anyone!</string>
    <string name="message_empty_followers_list">No-one is following this user!</string>

    <!-- error message -->
    <string name="error_invalid_authentication">Authentication error. Please try again!</string>
    <string name="error_invalid_datetime_format">Invalid date/time!</string>
    <string name="error_email_taken_message">Email is already taken!</string>
    <string name="error_username_taken_message">Username is already taken!</string>
    <string name="error_invalid_not_match">Confirm password and password must be the same !</string>
    <string name="error_contain_special_character">Username/Password must not contain special character !</string>
    <string name="error_invalid_email_message">Invalid Email!</string>
    <string name="error_required_field_message">Please fill all required field!</string>
    
        <string name="error_input_length">Length of username/Password must be 6 at least !</string>
    
    <string name="error_login_fail_message">Login fail. Please try again</string>
    <string name="error_general_error_message">Something went wrong. we\'re working on getting it fixed as soon as we can.</string>
    <string name="title_activity_search_friend">SearchFriendActivity</string>
    <string name="str_desImg">Des</string>

    <!-- GCM Message -->
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_second">Second</string>
        <string name="don_t_have_an_account"><![CDATA[  <i>Don\'t have an account !</i> <b>Sign up !</b>]]></string>
    
    <!-- CN -->
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="user_profile_following">following</string>
    <string name="user_profile_followers">followers</string>
    <string name="user_profile_gender">Gender</string>
    <string name="user_profile_gender_male">Male</string>
    <string name="user_profile_gender_female">Female</string>
    <string name="user_profile_date_of_birth">Date of Birth</string>
    <string name="user_profile_email">Email</string>
    <string name="colon">:</string>
    
    <string name="outsideEmptyMessage">Your outside is quite lonely!\nFollow more friends to be updated!</string>
    
    <string name="skip_tips">Please answer these simple question. If you do not want to answer, you can skip !!!</string>

</resources>
