<?xml version="1.0" encoding="utf-8"?>
<!--
  Capstone Project: Jornee 
  FileName: fragment_user_profile_layout.xml
  Copyright © 2014 4T1C - aka Group 3 - FPT University Da Nang. 
  All rights reserved. 
  No part of this application source code or any of its contents may be reproduced, 
  copied, modified or adapted, without the prior written consent of the author, 
  unless otherwise indicated for stand-alone materials.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1080" >

    <RelativeLayout
        android:id="@+id/infoRelaLayout"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/thumbnail"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="" >

            <com.fpt.edu.jornee.customview.CNSquareImageView
                android:id="@+id/userAvatar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/btnEditProfileAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/userAvatar"
                android:layout_alignRight="@+id/userAvatar"
                android:src="@drawable/ic_edit_profile_avatar" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ButtonFunction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/thumbnail"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/llBtnFollow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/btnFollow"
                    style="@style/jorneeStyle.button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_blue_button_selector"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBtnContact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/btnChat"
                    style="@style/jorneeStyle.button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_red_button_selector"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/txtMeOwnerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:layout_toRightOf="@+id/thumbnail"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ivHostMarker"
                android:layout_width="@dimen/user.entry.vip.icon.size"
                android:layout_height="@dimen/user.entry.vip.icon.size"
                android:layout_marginRight="@dimen/general.view.margin"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/ic_host_star_icon"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvUsername"
                style="@style/jorneeStyle.user.item.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/followInfor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ButtonFunction"
            android:layout_below="@+id/txtMeOwnerName"
            android:layout_toRightOf="@+id/thumbnail"
            android:background="#ff1d7898"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="3dip" >

            <LinearLayout
                android:id="@+id/followInforFollowing"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvNumberOfFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile_following"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/followInforFollowers"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvNumberOfFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile_followers"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/thumbnail"
            android:background="#801d7898"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/infoLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/user.info.avatar.thumbnail.user.margin"
                android:layout_marginRight="@dimen/user.info.avatar.thumbnail.user.margin"
                android:stretchColumns="2" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/general.view.margin"
                    android:paddingTop="@dimen/general.view.margin" >

                    <TextView
                        style="@style/jorneeStyle.text.small"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/general.view.margin.large"
                        android:gravity="left|center"
                        android:text="@string/user_profile_gender"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/jorneeStyle.text.small"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/general.view.margin"
                        android:gravity="center_vertical"
                        android:text="@string/colon"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtGender"
                        style="@style/jorneeStyle.text.medium"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/general.view.margin"
                    android:paddingTop="@dimen/general.view.margin" >

                    <TextView
                        style="@style/jorneeStyle.text.small"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/general.view.margin.large"
                        android:gravity="left|center"
                        android:text="@string/user_profile_date_of_birth"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/jorneeStyle.text.small"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/general.view.margin"
                        android:gravity="center_vertical"
                        android:text="@string/colon"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtDoB"
                        style="@style/jorneeStyle.text.medium"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawablePadding="@dimen/general.view.margin"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/general.view.margin"
                    android:paddingTop="@dimen/general.view.margin" >

                    <TextView
                        style="@style/jorneeStyle.text.small"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/general.view.margin.large"
                        android:gravity="left|center"
                        android:text="@string/user_profile_email"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/jorneeStyle.text.small"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/general.view.margin"
                        android:gravity="center_vertical"
                        android:text="@string/colon"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtEmail"
                        style="@style/jorneeStyle.text.medium"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/listJourney"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/infoRelaLayout" >
    </ListView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/listJourney"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtEmpty"
        style="@style/jorneeStyle.text.medium"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/listJourney"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:singleLine="false"
        android:textColor="@color/blue_hint"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/loadingProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
